# nuclai

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/nuclai/: __main__.py  cls.py  napari.yaml  rep_learning.py
src/nuclai/models/: CNN.py  baseline_classifier_train.py  evaluate_lr_rf.py  mlp.py  model1.py  model2.py  train_lr_rf.py  vqvae.py
src/nuclai/preprocessing/: create_hyperstack.py  filter_masks.py  generate_cls_input.py  generate_distance_matrix.py  generate_feature_matrix.py  generate_gnn_input.py  generate_list.py  generate_mask_coord_dict.py  mask_quality_control.py  reformat_centroids_labels.py  split_classic_feature_matrix.py
src/nuclai/utils/: callbacks.py  datamodule.py  evaluation.py  utils.py
