[metadata]
name = nuclai

description = A software to identify the presence of cell surface markers based on nuclear signal.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dsethz/nuclai
author = Daniel Schirmacher
author_email = dschirethz@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/dsethz/nuclai/issues
    Documentation = https://github.com/dsethz/nuclai#README.md
    Source Code = https://github.com/dsethz/nuclai
    User Support = https://github.com/dsethz/nuclai/issues

[options]
packages = find:
install_requires =
    matplotlib
    numpy
    pandas
    scikit-image
    scikit-learn
    tqdm
    monai
    monai-generative
    # torch
    # torchvision
    # lightning
    # histomicstk

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    replearn_train = nuclai.rep_learning:train
    replearn_test = nuclai.rep_learning:test
    replearn_predict = nuclai.rep_learning:predict
    cls_train = nuclai.cls:train
    cls_test = nuclai.cls:test
    cls_predict = nuclai.cls:predict

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pre-commit


[options.package_data]
* = *.yaml
